--- a/src/main/resources/templates/layouts/basic.html
+++ b/src/main/resources/templates/layouts/basic.html
@@ -31,48 +31,48 @@
       </button>
 
       <div class="collapse navbar-collapse" th:id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page"
-               href="/" th:href="@{/}">Home</a>
-          </li>
-          <!-- sec:authoize 속성을 통해 특정 요소(태그)를 활성화, 비활성화 설정
-               sec:authorize="hasAnyAuthority('ROLE_USER')" 변경전
-               sec:authorize="hasAnyAuthority('USER')"  변경후 -->
-          <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN')" >
-            <a class="nav-link" href="/admin/item/new"
-                                th:href="@{/admin/item/new}">상품등록</a>
-          </li>
-          <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
-            <a class="nav-link" href="/admin/items"
-                                th:href="@{/admin/items}">상품관리</a>
-          </li>
-          <li class="nav-item" sec:authorize="isAuthenticated()">
-            <a class="nav-link" href="/cart"
-                                th:href="@{/cart}">장바구니</a>
-          </li>
-          <li class="nav-item" sec:authorize="isAuthenticated()">
-            <a class="nav-link" href="/orders"
-                                th:href="@{/orders}">구매이력</a>
-          </li>
-          <li class="nav-item" sec:authorize="isAnonymous()">
-            <a class="nav-link" href="/members/login"
-                                th:href="@{/members/login}">로그인</a>
-          </li>
-          <li class="nav-item" sec:authorize="isAuthenticated()">
-            <a class="nav-link" href="/members/logout"
-                                th:href="@{/logout}">로그아웃</a>
-          </li>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page"
+                 href="/" th:href="@{/}">Home</a>
+            </li>
+            <!-- sec:authoize 속성을 통해 특정 요소(태그)를 활성화, 비활성화 설정
+                 sec:authorize="hasAnyAuthority('ROLE_USER')" 변경전
+                 sec:authorize="hasAnyAuthority('USER')"  변경후 -->
+            <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN')" >
+              <a class="nav-link" href="/admin/item/new"
+                                  th:href="@{/admin/item/new}">상품등록</a>
+            </li>
+            <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
+              <a class="nav-link" href="/admin/items"
+                                  th:href="@{/admin/items}">상품관리</a>
+            </li>
+            <li class="nav-item" sec:authorize="isAuthenticated()">
+              <a class="nav-link" href="/cart"
+                                  th:href="@{/cart}">장바구니</a>
+            </li>
+            <li class="nav-item" sec:authorize="isAuthenticated()">
+              <a class="nav-link" href="/orders"
+                                  th:href="@{/orders}">구매이력</a>
+            </li>
+            <li class="nav-item" sec:authorize="isAnonymous()">
+              <a class="nav-link" href="/members/login"
+                                  th:href="@{/members/login}">로그인</a>
+            </li>
+            <li class="nav-item" sec:authorize="isAuthenticated()">
+              <a class="nav-link" href="/members/logout"
+                                  th:href="@{/logout}">로그아웃</a>
+            </li>
 
-        </ul>
-        <!--  검색  키워드 폼
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-      -->
+          </ul>
+
+          <div sec:authorize="isAuthenticated()"
+               th:text="|${#authentication.principal.name}님|"
+               class="text-light  auth_margin_right"></div>
+
     </div>
+
+    </div> <!-- container-fluid -->
   </nav>
 </div>
 
@@ -143,7 +143,12 @@
         th:src="@{/js/scripts.js}"></script>
 
 
-
+<!-- 현재 페이지에서만 사용하는 css 정의 -->
+<style th:inline="css">
+  .auth_margin_right {
+    margin-right: 30px;
+  }
+</style>
 
 <!-- javascript import : 특정 페이지에서 사용되는 javascript인경우 -->
 <th:block layout:fragment="myscript"></th:block>
