--- a/src/main/resources/templates/board/modify.html
+++ b/src/main/resources/templates/board/modify.html
@@ -81,7 +81,7 @@
           <!-- 4. List, Modify 버튼-->
           <div class="my-4">
             <button type="button" class="btn btn-primary   listBtn">List</button>
-            <button type="button" class="btn btn-secondary modBtn" >Modify</button>
+            <button type="button" class="btn btn-secondary modBtn" >Save</button>
             <button type="button" class="btn btn-danger    removeBtn" >Remove</button>
           </div>
 
