--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,18 +28,21 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
+
         <div class="collapse navbar-collapse" th:id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page"
                  href="/" th:href="@{/}">Home</a>
             </li>
-            <!--          sec:authorize="hasAnyAuthority('ROLE_USER')"-->
-            <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')" >
+            <!-- sec:authoize 속성을 통해 특정 요소(태그)를 활성화, 비활성화 설정
+                 sec:authorize="hasAnyAuthority('ROLE_USER')" 변경전
+                 sec:authorize="hasAnyAuthority('USER')"  변경후 -->
+            <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN')" >
               <a class="nav-link" href="/admin/item/new"
                  th:href="@{/admin/item/new}">상품등록</a>
             </li>
-            <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')" >
+            <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
               <a class="nav-link" href="/admin/items"
                  th:href="@{/admin/items}">상품관리</a>
             </li>
@@ -61,14 +64,14 @@
             </li>
 
           </ul>
-          <!--  검색  키워드 폼
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+
+          <div sec:authorize="isAuthenticated()"
+               th:text="|${#authentication.principal.name}님|"
+               class="text-light  auth_margin_right"></div>
+
         </div>
-        -->
-        </div>
+
+      </div> <!-- container-fluid  -->
     </nav>
   </div>
 
@@ -144,6 +147,14 @@
 <script src="js/scripts.js"  th:src="@{/js/scripts.js}"></script>
 
 
+
+<!-- 현재 페이지에서만 사용하는 css 정의 -->
+<style th:inline="css">
+  .auth_margin_right {
+    margin-right: 30px;
+  }
+</style>
+<!-- 현재 페이지에서만 사용하는 javascript 정의 -->
 <script  th:inline="javascript">
   console.log("index.html");
   // ---------------------------------------------------------------------- //
