--- a/src/main/resources/templates/board/register.html
+++ b/src/main/resources/templates/board/register.html
@@ -50,12 +50,24 @@
                    placeholder="반드시 내용이 입력되어야 합니다."
                    id="writer"
                    name="writer"
+                   sec:authorize="isAuthenticated()"
                    th:value="${#authentication.principal.name}" readonly
                    />
             <label for="writer">Writer</label>
           </div>
 
-          <!-- 3. 글 보내기 버튼 -->
+          <!-- 4. 게시글 작성자 이메일
+           현재 로그인 사용자와 게시글 작성자가 동일한 판별하기위한 항목 -->
+          <div class="form-floating mb-3">
+            <!-- 로그인 상태일 경우만 #authentication객체변수 적용  -->
+            <input type="hidden" class="form-control"
+                   name="email"
+                   sec:authorize="isAuthenticated()"
+                   th:value="${#authentication.principal.email}" readonly
+            />
+          </div>
+
+          <!-- 5. 글 보내기 버튼 -->
           <div class="my-4">
             <div class="float-end">
             <button type="submit" class="btn btn-primary submitBtn">Submit</button>
