--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -87,17 +87,25 @@
             <td>[[${dto.bno}]]</td>
 
             <td >
+              <!-- 1. 게시글 제목 -->
               <!-- "board/read?bno=101"+"&"+"page=1&size=10" -->
               <a href="#" th:href="|@{/board/read(bno=${dto.bno})}&${link}|"
                  class="text-decoration-none">[[${dto.title}]]</a>
 
-              <!-- 게시글에 대한 댓글 개수 출력 추가 -->
+              <!-- 2. 게시글에 대한 댓글 개수 출력 추가 -->
               <span class="badge progress-bar-success" style="background-color:#0a53b3">
                 [[${dto.replyCount}]]+
               </span>
+
+              <!-- 3. 게시글에 대한 이미지 첨부파일 -->
+              <div class="py-2 thumbnail "th:if="${dto.boardImages != null && dto.boardImages.size() > 0}" >
+                <img style="width:100px" class="img-thumbnail"
+                     th:each="boardImage: ${dto.boardImages}"
+                     th:src="|/view/s_${boardImage.uuid}_${boardImage.fileName}|" />
+              </div>
             </td>
             <td>[[${dto.writer}]]</td>
-            <td>[[${   #temporals.format(dto.regDate, "yyyy-MM-dd")  }]]</td>
+            <td>[[${#temporals.format(dto.regDate, "yyyy-MM-dd")  }]]</td>
           </tr>
 
           </tbody>
@@ -156,7 +164,8 @@
 
 <!-- 현재 페이지에서만 사용하는 css 정의 -->
 <style layout:fragment="mystyle" th:inline="css">
-
+  .thumbnail > img { margin-right: 0.2em;}
+  .thumbnail > img:last-child { margin-right: 0;}
 </style>
 
 <!-- 현재 페이지에서만 사용하는 css 정의 -->
