--- a/src/main/resources/templates/board/register.html
+++ b/src/main/resources/templates/board/register.html
@@ -283,9 +283,10 @@
 
   }
 
-  // --------------------------  //
-  // 첨부파일 삭제
-  // --------------------------  //
+  // -------------------------------------  //
+  // 게시글 등록 작업에서 첨부파일 삭제시:
+  // 업로된 파일 삭제후, 이미지파일 화면에서 제거
+  // ------------------------------------  //
   function removeFile(uuid, fileName, obj){
    console.log(uuid)
    console.log(fileName)
